--- a/src/style.css
+++ b/src/style.css
@@ -100,3 +100,26 @@ input[type='radio']:checked + label {
   display: block;
   height: 100%;
 }
+
+footer {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  background-color: black;
+  width: 100%;
+  height: 5%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.github-logo {
+  display: inline-block;
+  height: 32px;
+  width: 32px;
+  background-image: url(./images/GitHub-Mark-32px.png);
+  background-repeat: no-repeat;
+  filter: invert(100%);
+  margin-left: 20px;
+}
